--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@
 #hole-page {
     margin: 0 auto;
 }
+/**utilities */
+.bg-cover {
+    background-position: center !important;
+    background-size: cover !important;
+}
 .nav-link {
     color: #000;
 }
@@ -21,4 +26,70 @@
     border-radius: 50px;
     padding: 10px 39px;
 }
+.btn-custom:hover {
+    background: #000;
+    transition: all 0.3ms;
+}
+.text-custom {
+    color: #8f7247;
+}
+.bg-container {
+    background-image: url('../img/home.webp');
+}
+.hero-text {
+    font-family: 'Roboto Condensed';
+}
+.hero-text h3 {
+    font-size: 24px;
+    font-weight: 400;
+    letter-spacing: 3px;
+}
+.hero-text h1 {
+    font-size: 60px;
+    font-weight: 700;
+}
+.hero-text p {
+    font-size: 18px;
+    font-family: 'Roboto';
+}
 
+/**service */
+.service-box {
+    padding:32px;
+    box-shadow: 0px 6px 30px rgba(0,0,0,0.08);
+    text-align: center;
+    position: relative;
+}
+.service-box img {
+    width:50px;
+    height: 50px;
+}
+.service-box h5 {
+    margin-top: 24px;
+    margin-bottom: 12px;
+}
+/**testimonials section */
+.imgbox {
+    position: absolute;
+    top: -50px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100px;
+    height: 100px;
+}
+.imgbox img {
+    top: 23px;
+    position: absolute;
+}
+
+/**form part */
+.form-card {
+    display: grid;
+    grid-template-columns: 420px 420px ;
+}
+.testimonials-section {
+    background: url('./../img/testimonial.webp') fixed;
+}
+.appointment-section {
+    background: url('./../img/book-bg.webp') center no-repeat;
+}
