final modifications on footer

--- a/css/main.css
+++ b/css/main.css
@@ -93,3 +93,7 @@
 .appointment-section {
     background: url('./../img/book-bg.webp') center no-repeat;
 }
+.maps-contact {
+    background: url('./../img/green.webp') no-repeat center;
+
+}
